Removing some printing here, adding there. The `sha2` test works now, but pretty sure it is just spinning its wheels uselessly

--- a/alt_require/test/client_on/Makefile
+++ b/alt_require/test/client_on/Makefile
@@ -1,5 +1,10 @@
+sha2_all: sha2 sha2_more
+
 sha2:
 	lua top_in_client.lua "merkle.test.sha2"
+
+sha2_more:
+	lua top_in_client.lua "merkle.test.sha2_more"
 
 complex:
 	lua top_in_client.lua "alt_require.test.toys.complex"
