Adding some more tests, dont quite work. Also lazier way to do it. `os.` and such is used in the tests.. enabling it.

--- a/alt_require/test/Makefile
+++ b/alt_require/test/Makefile
@@ -1,3 +1,6 @@
+tic/%:
+	lua bin/top_in_client.lua "`echo -n$@ | cut -f 2 -d/`"
+
 default:
 	echo "Options:" > /dev/null
 	grep ':' Makefile
@@ -28,15 +31,15 @@ client:
 	lua client.lua
 
 # Looks like this works
-complex:
-	lua bin/top_in_client.lua "alt_require.test.toys.complex"
+complex: tic/alt_require.test.toys.complex
 
-# Tests from other projects.
-sha2_all: sha2 sha2_more
+# Top-layer-on-client tests from other projects.
+# TODO more arbitrary distinctions
+external_test: sha2
 
-sha2:
-	lua bin/top_in_client.lua "merkle.test.sha2"
-sha2_more:
-	lua bin/top_in_client.lua "merkle.test.sha2_more"
+sha2: tic/merkle.test.sha2  tic/merkle.test.sha2_more
 
-# TODO more.
+# Don't work; apparent looping.
+merkle: tic/merkle.Merkle.test.merkle
+storebin: tic/storebin.test.pkg tic/storebin.test.test tic/storebin.test.try
+
