--- a/alt_require/test/Makefile
+++ b/alt_require/test/Makefile
@@ -27,7 +27,7 @@ all_client: client.lua client.luajit
 complex: tic/alt_require.test.toys.complex
 
 # Top-layer-on-client tests from other projects. (TODO need to go deeper, obviously)
-top_layer_test: sha2 storebin merkle Searcher page_html/util
+top_layer_test: sha2 storebin merkle page_html/util #Searcher
 
 sha2: tic/merkle.test.sha2  tic/merkle.test.sha2_more
 storebin: tic/storebin.test.pkg tic/storebin.test.test tic/storebin.test.try
